--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "flarum/mentions",
+    "name": "izapbrasil/mentions",
     "description": "Mention and reply to specific posts and users.",
     "type": "flarum-extension",
     "keywords": ["discussion"],
